Title: Style fixes * Calendar.scss: adds height and z-index to position and show properly * SettingsIcon.jsx: puts the export call to the declaration line * SettingsIcon.module.scss: removes unnecessary styling * NotificationCard.jsx: comments out log command and overflow style rule * NotificationCard.module.scss: simplifies some lines * TopBar.module.scss: fixes some style rules for positioning * Feed.jsx: Reorganizes elements * Feed.module.scss: simplifies some rules and fixes some errors * Profile.jsx: reorganizes elements

--- a/fitness-app/frontend/src/components/Calendar/Calendar.scss
+++ b/fitness-app/frontend/src/components/Calendar/Calendar.scss
@@ -4,4 +4,6 @@
   top: 16px;
   // width: 25vw;
   width: 35vw;
+  height: 100%;
+  z-index: 2;
 }
