--- a/fitness-app/frontend/src/components/Icons/SettingsIcon/SettingsIcon.module.scss
+++ b/fitness-app/frontend/src/components/Icons/SettingsIcon/SettingsIcon.module.scss
@@ -1,7 +1,4 @@
 .settingsIcon {
-    position: fixed;
-    top: 16px;
-    right: 16px;
     width: 24px;
     height: 24px;
     cursor: pointer;
